Made Sea-of-Gates router use packaged preferences
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@9185 b64ed6c1-75a8-e629-b1da-d0dae74a743a